gap on full screen fix attempt .main height 110%

--- a/rocketstyles.css
+++ b/rocketstyles.css
@@ -241,7 +241,7 @@ a:hover {
   margin-left: -2.5%;
   overflow-x: hidden;
   width: 105%;
-  height: 100%;
+  height: 110%;
   z-index: 10;
   /*position: relative;
   top: -400px;
